tests/neg/i25531.scala
import java.nio.file.*

class Walker extends FileVisitor[Path] {} // error
